syntax = "proto3";

option csharp_namespace = "WordServer";

// Provides methods that implement the Word service.
service DailyWord {
  // Returns the word of the day
  rpc GetWord (GetWordRequest) returns (GetWordResponse);
  // Validates the user's guess
  rpc ValidateWord(ValidateWordRequest) returns (ValidateWordResponse);
}

// Empty request
message GetWordRequest {}

// The word of the day
message GetWordResponse {
  string word = 1;
}

// The user's guess
message ValidateWordRequest {
	string word = 1;
}

// The result of the user's guess
message ValidateWordResponse {
  bool correct = 1;
}
